# pal-control

./: .gitattributes  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/console-web/: BUNDLE_BUDGET.md  bundle-budget.json  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/player-web/: index.html  package.json  playwright.config.ts  vite.config.ts
deploy/player-portal/: Caddyfile  README.md  player-portal.env.example
deploy/windows/: PalModSettings.example.ini  Test-CompatibilityMatrix.ps1  activate-client-overlay.ps1  appsettings.Local.example.json  appsettings.Production.example.json  build-release.ps1  collect-release-notices.ps1  configure-paldefender.ps1  install-paldefender.ps1  installer.iss  new-admin-credential.ps1  run-development.ps1  start-native-probe-palserver.ps1  start-palserver-guarded.ps1  stop-native-probe-palserver.ps1
docs/: MOD能力与接口维护手册.md  economy-balance-guard.md  open-source-release.md  安装使用说明.html
docs/api/: command-model.md
docs/architecture/: overview.md
docs/player-portal/: 01-部署手册.md  02-端口与信任边界.md  03-威胁模型.md  04-验收清单.md  05-玩家使用教程.md  README.md
docs/runbooks/: acceptance-evidence.md  announcement-publishing.md  economy-analytics.md  economy-content-publishing.md  economy-continuity-and-weekly-rollover.md  economy-migration-reconciliation.md  economy-observability.md  economy-operations-workbench.md  economy-safety-gate.md  extraction-chat-command.md  first-server-start.md  local-rest-security.md  logging-correlation-and-redaction.md  paldefender-integration.md  player-notifications.md  production-deployment-and-recovery.md  save-management.md  season-leaderboard-settlement.md  selective-resource-sale.md  server-federation-and-compatibility.md  team-economy.md  weekly-economy-report.md  zone-calibration.md
extraction-mode/: README.md
extraction-mode/docs/: 00-MVP玩法与架构.md  01-数据模型.md  02-API契约.md  03-交易与撤离状态机.md  04-运行与安全换档手册.md  05-实施阶段与验收.md
extraction-mode/scripts/: Invoke-WeeklyRollover.ps1  Test-ExtractionMode.ps1
mods/pal-control-native/: CMakeLists.txt  Info.template.json  README.md  UE4SSRuntime.Info.template.json  dependencies.lock.json  xmake.lua
mods/pal-control-native/Config/: PalControl.ini
mods/pal-control-native/Source/PalControl/Private/: dllmain.cpp
mods/pal-control-native/Source/PalControl/Private/Bridge/: NamedPipeServer.cpp  NamedPipeServer.hpp  README.md
mods/pal-control-native/Source/PalControl/Private/GameAdapter/: ExtractionChatCommand.cpp  ExtractionChatCommand.hpp  PalworldGameAdapter.cpp  PalworldGameAdapter.hpp  RandomSafeRespawn.cpp  RandomSafeRespawn.hpp
mods/pal-control-native/Source/PalControl/Private/Runtime/: ExecutableIdentity.cpp  ExecutableIdentity.hpp
mods/pal-control-native/Source/PalControl/Public/Contracts/: BridgeMessage.hpp
mods/pal-control-native/Source/PalControl/Public/GameAdapter/: IGameAdapter.hpp
mods/pal-control-native/scripts/: Build-PalControlNative.ps1  Prepare-Ue4ssSource.ps1
services/control-api/: PalControl.ControlApi.csproj  Program.cs  appsettings.json
tests/: run-tests.ps1
tests/acceptance-evidence-policy/: PalControl.AcceptanceEvidence.PolicyHarness.csproj  Program.cs
tests/admin-operation-keys/: PalControl.AdminOperationKeys.Harness.csproj  Program.cs
tests/admin-security/: PalControl.AdminSecurity.ContractTests.csproj  Program.cs
tests/content-definitions/: Program.cs
tests/content-projection-atomicity/: Program.cs
tests/continuity-rollover/: PalControl.ContinuityRolloverHarness.csproj  Program.cs
tests/contract/: README.md  admin-security-contract.ps1  economy-analytics-contract.ps1  economy-observability-contract.ps1  economy-safety-contract.ps1  extraction-mode-options-contract.ps1  federation-contract.ps1  native-settlement-contract.ps1  new-player-activity-contract.ps1  player-identity-security-contract.ps1  resource-economy-contract.ps1  soak-observability-contract.ps1  startup-security-contract.ps1  steam-openid-contract.ps1  team-economy-contract.ps1  windows-configure-preservation-contract.ps1
tests/delivery-receipts/: PalControl.DeliveryReceiptsHarness.csproj  Program.cs
tests/economy-analytics/: PalControl.EconomyAnalytics.Harness.csproj  Program.cs
tests/economy-balance-guard/: PalControl.EconomyBalanceGuard.Harness.csproj  Program.cs
tests/economy-invariants/: Program.cs  README.md
tests/economy-observability/: Program.cs
tests/economy-reconciliation/: Program.cs  (+1 more)
tools/: native-bridge-probe.ps1  run-native-bridge-probe-suite.ps1
tools/soak/: README.md  (+7 more)
(+343 files in other folders)
